Fixed chat input container not displaying properly when keyboard was opened on mobile phones

--- a/styles/Chat/ChatBody.module.css
+++ b/styles/Chat/ChatBody.module.css
@@ -103,6 +103,14 @@
   filter: brightness(1.1);
 }
 
+/* mobile media query */
+@media screen and (max-width: 768px) {
+  .chatInputContainer {
+    position: fixed;
+    padding: var(--padding-small) var(--padding-small);
+  }
+}
+
 /* small mobile media query */
 @media screen and (max-width: 512px) {
   .chatInputContainer {
